gitops/flux/apps/source/booksapp/acme-solver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acme-challenge-service
  namespace: booksapp
spec:
  ports:
  - port: 80
    targetPort: 8089
  selector:
    acme.cert-manager.io/http01-solver: "true"
