gitops/flux/apps/source/booksapp/booksapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booksapp
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: booksapp
  labels:
    app: webapp
    project: booksapp
spec:
  selector:
    app: webapp
  type: ClusterIP
  ports:
  - name: service
    port: 7000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  namespace: booksapp
  labels:
    app: webapp
    project: booksapp
    app.kubernetes.io/part-of: booksapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
      project: booksapp
  template:
    metadata:
      labels:
        app: webapp
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.5
        args: ["prod:webapp"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7000
        ports:
        - name: service
          containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: authors
  namespace: booksapp
  labels:
    app: authors
    project: booksapp
spec:
  selector:
    app: authors
  ports:
  - name: service
    port: 7001
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authors
  namespace: booksapp
  labels:
    app: authors
    project: booksapp
    app.kubernetes.io/part-of: booksapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      project: booksapp
  template:
    metadata:
      labels:
        app: authors
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.5
        args: ["prod:authors"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7001
        ports:
        - name: service
          containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: books
  namespace: booksapp
  labels:
    app: books
    project: booksapp
spec:
  selector:
    app: books
  ports:
  - name: service
    port: 7002
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: books
  namespace: booksapp
  labels:
    app: books
    project: booksapp
    app.kubernetes.io/part-of: booksapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      project: booksapp
  template:
    metadata:
      labels:
        app: books
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.5
        args: ["prod:books"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7002
        ports:
        - name: service
          containerPort: 7002
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traffic
  namespace: booksapp
  labels:
    app: traffic
    project: booksapp
    app.kubernetes.io/part-of: booksapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic
      project: booksapp
  template:
    metadata:
      labels:
        app: traffic
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: traffic
        image: buoyantio/booksapp-traffic:v0.0.3
        args:
        - "-initial-delay=30s"
        - "webapp:7000"
