gitops/flux/apps/source/booksapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksapp
  namespace: booksapp
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 7000
  tls:
  - hosts:
    - booksapp.civo.59s.io
    secretName: booksapp-ingress
